src/test/compile-fail/extfmt-too-many-args.rs
// error-pattern:too many arguments

use std;

fn main() { let s = #ifmt["%s", "test", "test"]; }
